# automate

./: ANDAMAN_2W_H&M.xlsx  README.md  main.py  pipeline.py  pyproject.toml  requirements.streamlit.txt  requirements.txt  segment_parser.py  streamlit_app.py
.streamlit/: config.toml
.venv-streamlit/: pyvenv.cfg
input/: Digit Jan'26_h&M.xlsx
output/: BIHAR_2W_RULE_DIGIT.xlsx  DELHI_2W_H&M.xlsx  GJ_2w_all_Rto_Rule.xlsx  GOA_FINAL_2W_H&M.xlsx  HP_2W_H&m.xlsx  HR_STATE_2w_H&m.xlsx  JH_2W_H&M.xlsx  KARNATAK_2W_H&M.xlsx  Madhyapradesh_2w_H&M.xlsx  Maharashtra_2w_H&M.xlsx  NORTHEAST_2W_H&M.xlsx  ORISSA_STATE_2W_FINAL_H&M_OR_OD.xlsx  RJ_2W_H&M.xlsx  TN_KL_2W_H&M.xlsx  UP_UK_2W_H&M.xlsx  WB_2W_H&M.xlsx
pipeline_output/: ANDAMAN_2W_H&M.xlsx  APTS_2W_H&M.xlsx  BIHAR_2W_H&M.xlsx  DELHI_2W_H&M.xlsx  GJ_2W_H&M.xlsx  GOA_2W_H&M.xlsx  HP_2W_H&M.xlsx  HR_2W_H&M.xlsx  JH_2W_H&M.xlsx  JK_2W_H&M.xlsx  KARNATAK_2W_H&M.xlsx  Madhyapradesh_2W_H&M.xlsx  Maharashtra_2W_H&M.xlsx  NORTHEAST_2W_H&M.xlsx  ORISSA_2W_H&M.xlsx  PB_CH_2W_H&M.xlsx  RJ_2W_H&M.xlsx  TN_KL_2W_H&M.xlsx  UP_UK_2W_H&M.xlsx  WB_2W_H&M.xlsx
scripts/: parity_check.py  run_streamlit.sh
static/: style.css
tasks/: todo.md
templates/: index.html
test_data/: HM_DIGIT_MAR26_GRID.xlsx
test_output/: ANDAMAN_2W_H&M.xlsx  BIHAR_2W_H&M.xlsx  DELHI_2W_H&M.xlsx  Maharashtra_2W_H&M.xlsx
test_output2/: ANDAMAN_2W_H&M.xlsx  BIHAR_2W_H&M.xlsx  DELHI_2W_H&M.xlsx  Maharashtra_2W_H&M.xlsx  hitl_review_queue.json
test_output3/: ANDAMAN_2W_H&M.xlsx  BIHAR_2W_H&M.xlsx  DELHI_2W_H&M.xlsx  Maharashtra_2W_H&M.xlsx
(+136 files in other folders)
