[project]
name = "autoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "litellm>=1.82.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "uvicorn>=0.35.0",
]
